--- a/react/src/app/iam/containers/global/api-test/APITest.scss
+++ b/react/src/app/iam/containers/global/api-test/APITest.scss
@@ -539,6 +539,7 @@
                 //white-space: nowrap;
                 font-size: 14px;
                 word-break: break-word;
+                display: flex;
 
                 &:hover {
                   i.icon.icon-library_books {
