--- a/react/src/app/iam/containers/global/api-test/APITest.scss
+++ b/react/src/app/iam/containers/global/api-test/APITest.scss
@@ -292,12 +292,11 @@
 
           // 接口信息的内容
           &-interfaceinfo {
-            padding: 20px;
-            background: #f8f8f8;
             position: relative;
             width: 48%;
             word-wrap: break-word;
-
+            border-top: .01rem solid rgba(0,0,0,0.12);
+            padding-top: .16rem;
             &-row {
               margin-bottom: 14px;
 
@@ -321,9 +320,9 @@
             width: 50%;
             right: 0;
             overflow: auto;
-            padding: 13px 16px;
-            background: #f1f9ff;
             font-size: 14px;
+            border-top: .01rem solid rgba(0,0,0,0.12);
+            padding-top: .16rem;
 
             pre {
               width: 20px;
@@ -466,8 +465,6 @@
 
           .c7n-response-container {
             margin: 32px 1px 1px 3px;
-            padding: 24px 16px 30px 16px;
-            box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.20), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
             pre {
               width: 20px;
@@ -476,12 +473,15 @@
             }
 
             .c7n-response-code {
-              display: flex;
-
+              h5 {
+                border-bottom: .01rem solid rgba(0, 0, 0, 0.12);
+                padding-bottom: .04rem;
+                margin-bottom: .16rem;
+              }
               .c7n-iam-apitest-statusCode {
+                display: block;
                 width: 45px;
                 height: 25px;
-                margin-left: 30px;
                 font-size: 15px;
                 border-radius: 2px;
                 text-align: center;
@@ -533,9 +533,9 @@
               .response-body-container {
                 width: 100%;
                 max-height: 228px;
-                padding: 16px;
                 overflow: auto;
-                background: #f1f9ff;
+                padding-top: .16rem;
+                border-top: 1px solid rgba(0, 0, 0, 0.12);
                 //white-space: nowrap;
                 font-size: 14px;
                 word-break: break-word;
@@ -568,11 +568,11 @@
                 max-height: 228px;
                 margin-top: 12px;
                 line-height: 1.5;
-                padding: 16px;
                 //white-space: nowrap;
+                padding-top: .16rem;
+                border-top: 1px solid rgba(0, 0, 0, 0.12);
                 word-break: break-word;
                 overflow: auto;
-                background: #f1f9ff;
                 color: #444;
                 font-size: 14px;
 
