--- a/react/src/app/iam/containers/global/api-test/apiTree/ApiTree.scss
+++ b/react/src/app/iam/containers/global/api-test/apiTree/ApiTree.scss
@@ -20,13 +20,14 @@
     font-size: 13px;
     display: flex;
     align-items: center;
+    .c7n-input-has-border.c7n-input-wrapper:before {
+      background: rgba(0, 0, 0, 0.06);
+      border: none;
+    }
 
     &-button {
-      cursor: pointer;
-      width: 26px;
+      width: 0;
       height: 22px;
-      background-color: #3f51b5;
-      color: white;
       text-align: center;
       line-height: 18px;
       margin: 0 6px 0 11px;
