--- a/react/src/app/iam/containers/global/instance/list/index.less
+++ b/react/src/app/iam/containers/global/instance/list/index.less
@@ -17,8 +17,14 @@
       }
       &-title {
         .tree-title {
-          display: inline-block;
+          display: flex;
+          align-items: center;
           line-height: .24rem;
+          color: rgba(0, 0, 0, 0.65);
+          .icon {
+            font-size: .14rem;
+            margin-right: .05rem;
+          }
         }
       }
     }
