[REF] 使用新的规范和pro组件重构微服务实例详情页

--- a/react/src/app/iam/containers/global/instance/detail/index.less
+++ b/react/src/app/iam/containers/global/instance/detail/index.less
@@ -3,12 +3,13 @@
     padding-left: 16px;
     width: 512px;
     .instanceInfo {
-      > div {
-        font-size: 13px;
-        margin-bottom: 12px;
-        > div:nth-child(2) {
-          color: rgba(0, 0, 0, 0.65);
-        }
+      .c7n-pro-field-label,
+      .c7n-pro-field-wrapper {
+        padding: .07rem .05rem;
+        font-size: .14rem;
+      }
+      .c7n-pro-field-label {
+        color: rgba(0, 0, 0, 0.65);
       }
     }
   }
