[FIX] 修复微服务实例中收起按钮可能会换行的问题

--- a/react/src/app/iam/containers/global/instance/list/index.less
+++ b/react/src/app/iam/containers/global/instance/list/index.less
@@ -12,7 +12,7 @@
       color: white;
       text-align: center;
       line-height: 18px;
-      margin: 0 6px 0 11px;
+      margin-left: 11px;
       border-radius: 3px;
 
   }
