--- a/react/src/app/iam/containers/global/api-test/APITest.scss
+++ b/react/src/app/iam/containers/global/api-test/APITest.scss
@@ -38,6 +38,7 @@
     margin-top: 30px;
     text-align: start;
     padding: 0 18px;
+    height: 192px;
   }
 
   .c7n-apitest-modal-btn-group {
@@ -297,7 +298,7 @@
             position: relative;
             width: 48%;
             word-wrap: break-word;
-            border-top: .01rem solid rgba(0,0,0,0.12);
+            border-top: .01rem solid rgba(0, 0, 0, 0.12);
             padding-top: .16rem;
             &-row {
               margin-bottom: 14px;
@@ -323,7 +324,7 @@
             right: 0;
             overflow: auto;
             font-size: 14px;
-            border-top: .01rem solid rgba(0,0,0,0.12);
+            border-top: .01rem solid rgba(0, 0, 0, 0.12);
             padding-top: .16rem;
 
             pre {
