[IMP]修改样式，添加tooltips

--- a/react/src/app/iam/containers/global/gray-released/RouterTable.less
+++ b/react/src/app/iam/containers/global/gray-released/RouterTable.less
@@ -1,7 +1,13 @@
 .c7n-manager-grayRelease-router {
-  &-table {
-    //.c7n-pro-table-cell {
-    //  padding: 0 !important;
-    //}
+  &-code {
+    .hover();
+  }
+}
+.hover() {
+  color: #000;
+  &:hover {
+    color: #3f51b5;
+    text-decoration: underline;
+    cursor: pointer;
   }
 }
