--- a/react/src/app/iam/containers/global/api-test/apiTree/ApiTree.scss
+++ b/react/src/app/iam/containers/global/api-test/apiTree/ApiTree.scss
@@ -59,7 +59,7 @@
     overflow-x: hidden;
     overflow-y: auto;
 
-    .c7n-tree > li:first-child {
+    .c7n-tree {
       padding-top: 18px;
     }
     .c7n-tree li ul {
@@ -71,7 +71,7 @@
       color: rgba(0, 0, 0, .65);
     }
 
-    .c7n-tree li .c7n-tree-node-content-wrapper {
+    .c7n-tree .c7n-tree-node-content-wrapper {
       width: calc(100% - 22px);
       display: inline-flex;
       align-items: center;
@@ -80,12 +80,12 @@
       cursor: pointer;
     }
 
-    .c7n-tree li .c7n-tree-node-content-wrapper.c7n-tree-node-selected {
+    .c7n-tree .c7n-tree-node-content-wrapper.c7n-tree-node-selected {
       background: rgba(0, 0, 0, .04);
     }
 
     .c7n-tree-switcher {
-      margin-top: 5px;
+      margin-top: 3px;
     }
     .c7n-iam-apitest-api-wrapper-1,
     .c7n-iam-apitest-api-wrapper-2,
@@ -98,7 +98,7 @@
       }
     }
 
-    .c7n-tree li span.c7n-tree-iconEle {
+    .c7n-tree span.c7n-tree-iconEle {
       margin-right: 6px;
       cursor: pointer;
 
@@ -108,7 +108,7 @@
     }
 
     .c7n-tree-child-tree {
-      li.c7n-iam-apitest-api-wrapper:last-child {
+      .c7n-iam-apitest-api-wrapper:last-child {
         margin-bottom: 0;
       }
     }
